--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ body {
 
 .feature-image {
     flex: 1;
-    height: 700px;
+    height: 800px;
     background-color: #121212;
     border-radius: 20px;
     display: flex;
@@ -295,8 +295,9 @@ body {
 
     .feature-image {
         width: 100%;
-        height: 0;
-        padding-bottom: 100%;
+        height: 90%;
+        padding-bottom: 110%;
+        object-fit: cover;
         position: relative;
     }
 
